--- a/ToDoList/GUI/LoginWindow.xaml
+++ b/ToDoList/GUI/LoginWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         xmlns:uc="clr-namespace:GUI.ControlBarUC"
+        Icon="Images/favicon.png"
+        
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
