--- a/ToDoList/GUI/MainWindow.xaml
+++ b/ToDoList/GUI/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
+        Icon="Images/favicon.png"
         
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -15,9 +16,146 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="500" Width="1000"
         WindowStartupLocation="CenterScreen">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
 
+        <StackPanel Grid.Row="0"  
+            Margin="10 0"
+            Orientation="Horizontal"
+            HorizontalAlignment="Right">
+            <TextBox Name="TextBoxSearchMain"
+                Width="200"
+                Height="30"
+                FontSize="15"
+                Margin="5 0"
+                VerticalContentAlignment="Center"
+                materialDesign:HintAssist.Hint="Tìm kiếm"
+                TextChanged="TextBoxSearchMain_TextChanged"/>
+          
+            <Ellipse Width="30" Height="30" Margin="10 0" Cursor="Hand">
+                <Ellipse.Fill>
+                    <ImageBrush x:Name="ImageBrushAvatar" 
+                                ImageSource="Images/icon-user-default.png" />
+                </Ellipse.Fill>
+            </Ellipse>
+          
+            <materialDesign:PackIcon Name="IconLogout"
+                MouseDown="IconLogout_MouseDown_Logout"
+                Kind="Logout"
+                Width="25" 
+                Height="25"
+                Cursor="Hand"
+                Background="Transparent"
+                VerticalAlignment="Center"
+                Foreground="#512DA8"/>
+        </StackPanel>
+        <Grid Grid.Row="1"
+              Background="#f1f1f1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="8*"/>
+            </Grid.ColumnDefinitions>
+            <Button Name="ButtonAddWork"
+                Grid.Column="0"
+                Margin="20 0"
+                HorizontalAlignment="Left"
+                Style="{StaticResource MaterialDesignRaisedDarkButton}"
+                ToolTip="MaterialDesignRaisedLightDarkButton">
+                <StackPanel Orientation="Horizontal">
+                    <materialDesign:PackIcon
+                        Kind="Add"
+                        Height="24"
+                        Width="24" />
+                    <TextBlock Text="Thêm công việc"
+                        VerticalAlignment="Center"/>
+                </StackPanel>
+
+            </Button>
+            <StackPanel Grid.Column="1"
+                Margin="20 0"
+                Orientation="Horizontal"
+                HorizontalAlignment="Right">
+                <DatePicker Name="DatePickerToDay"
+                    Width="100"
+                    Margin="10 0"
+                    materialDesign:HintAssist.Hint="Từ ngày"
+                    Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                <DatePicker Name="DatePickerFromDay"
+                    Width="100"
+                    Margin="10 0"
+                    materialDesign:HintAssist.Hint="Tới ngày"
+                    Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                <ComboBox Name="ComboBoxStatus"
+                      Margin="10 0 10 -2"
+                      Cursor="Hand"  
+                      SelectionChanged="ComboBoxStatus_SelectionChanged"
+                      materialDesign:HintAssist.Hint="Trạng thái"
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                </ComboBox>
+                <ComboBox Name="ComboBoxRange"
+                      Margin="10 0 10 -2"
+                      Width="80"
+                      Cursor="Hand"
+                      materialDesign:HintAssist.Hint="Phạm vi"
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}">
+                </ComboBox>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="2">
+            <ListView Name="ListViewWork">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Width="150"
+                            DisplayMemberBinding="{Binding WorkTitle}">
+                            <GridViewColumnHeader Cursor="Hand"
+                                Content="Tên công việc" 
+                                Click="GridViewColumnHeader_Click_Sort"/>
+                        </GridViewColumn>
+                        
+                        <GridViewColumn Width="150"
+                            DisplayMemberBinding="{Binding WorkStartDate}">
+                            <GridViewColumnHeader Cursor="Hand"
+                                Content="Ngày bắt đầu" 
+                                Click="GridViewColumnHeader_Click_Sort"/>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="150"
+                            DisplayMemberBinding="{Binding WorkEndDate}">
+                            <GridViewColumnHeader Cursor="Hand"
+                                Content="Ngày kết thúc"
+                                Click="GridViewColumnHeader_Click_Sort"/>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="130"
+                            DisplayMemberBinding="{Binding WorkStatus}">
+                            <GridViewColumnHeader Cursor="Hand"
+                                Content="Trạng thái"
+                                Click="GridViewColumnHeader_Click_Sort"/>
+                        </GridViewColumn>
+
+                        <GridViewColumn Width="130"
+                            DisplayMemberBinding="{Binding WorkRange}">
+                            <GridViewColumnHeader Cursor="Hand"
+                                Content="Phạm vi"
+                                Click="GridViewColumnHeader_Click_Sort"/>
+                        </GridViewColumn>
+                        <GridViewColumn 
+                            DisplayMemberBinding="{Binding WorkCoWorker}">
+                            <GridViewColumnHeader Cursor="Hand"
+                                Content="Số người làm chung"
+                                Click="GridViewColumnHeader_Click_Sort"/>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+                
+            </ListView>
+        </Grid>
     </Grid>
 </Window>
