--- a/ToDoList/GUI/LoginWindow.xaml
+++ b/ToDoList/GUI/LoginWindow.xaml
@@ -26,8 +26,7 @@
             <RowDefinition Height="8*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Margin="0 10 0 0">
-            <Image Source="Images\favicon.png"/>
-
+            <Image MouseDown="test_MouseDown" x:Name="test" Source="Images\favicon.png"/>
         </Grid>
         <materialDesign:Card Grid.Row="1" Padding="0 0 0 20"
                              HorizontalAlignment="Center" 
@@ -63,10 +62,10 @@
                                              Margin="4"/>
                     <TextBox Grid.Column="1"
                              x:Name="Email"
+                             Text="vuong@gmail.com"
                              materialDesign:HintAssist.Hint="Email"
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                    
-                    
+                             Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}"/>
+                                        
                 </Grid>
                 <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
@@ -79,10 +78,11 @@
                                              Margin="4"/>
                     <PasswordBox
                         Grid.Column="1"
-                        PasswordChar="*"
+                        PasswordChar="@"
+                        Password="123456"
                         x:Name="Password" 
                         materialDesign:HintAssist.Hint="Mật khẩu"
-                        Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" />
+                        Style="{StaticResource MaterialDesignOutlinedPasswordFieldPasswordBox}" />
                 </Grid>
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
@@ -90,31 +90,22 @@
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0"
+                        HorizontalAlignment="Right"
                         Style="{StaticResource MaterialDesignRaisedDarkButton}"
                         Width="100"
+                        Margin="20 0"
                         Content="Đăng nhập"
-                        Background="#46CEFC "
-                        ToolTip="Resource name: MaterialDesignRaisedLightDarkButton" 
+                        Background="#46CEFC "                        
                         Click="Button_Login"/>
                     <Button Grid.Column="1"
                         Style="{StaticResource MaterialDesignRaisedDarkButton}"
                         Width="100"
+                        HorizontalAlignment="Left"
+                        Margin="20 0"
                         Content="Thoát"
-                        Background="Red"
-                        ToolTip="Resource name: MaterialDesignRaisedLightDarkButton"
+                        Background="Red"                       
                         Click="Button_Exit"/>
 
-                </Grid>
-
-                <Grid Grid.Row="4" Margin="0 20 0 0">
-                    <TextBlock VerticalAlignment="Center">
-                        Bạn chưa có tài khoản? 
-                        <Bold Foreground="Blue" 
-                              MouseLeftButtonUp="Bold_MouseLeftButtonUp_Register">
-                           Đăng ký
-                        </Bold>
-                    </TextBlock>
-                    
                 </Grid>
             </Grid>
         </materialDesign:Card>
