--- a/ToDoList/GUI/LoginWindow.xaml
+++ b/ToDoList/GUI/LoginWindow.xaml
@@ -16,7 +16,8 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         
-        ResizeMode="NoResize"
+        PreviewKeyDown="Grid_PreviewKeyDown"
+        ResizeMode="CanMinimize"
         mc:Ignorable="d"
         Title="Đăng nhập" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
@@ -26,7 +27,9 @@
             <RowDefinition Height="8*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Margin="0 10 0 0">
-            <Image MouseDown="test_MouseDown" x:Name="test" Source="\bin\Debug\Avatar\bg.jpeg"/>
+            <Image MouseDown="test_MouseDown" 
+                   x:Name="test" 
+                   Source="Images/favicon.png"/>
         </Grid>
         <materialDesign:Card Grid.Row="1" Padding="0 0 0 20"
                              HorizontalAlignment="Center" 
@@ -57,14 +60,14 @@
                         <ColumnDefinition Width="9.2*"/>
                     </Grid.ColumnDefinitions>
                     <materialDesign:PackIcon Grid.Column="0"
-                                             Kind="Email" 
-                                             VerticalAlignment="Bottom"
-                                             Margin="4"/>
+                        Kind="Email" 
+                        VerticalAlignment="Center"
+                        Margin="4"/>
                     <TextBox Grid.Column="1"
-                             x:Name="Email"
-                             Text="vuong@gmail.com"
-                             materialDesign:HintAssist.Hint="Email"
-                             Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}"/>
+                        x:Name="Email"
+                        Text="vuong@gmail.com"
+                        materialDesign:HintAssist.Hint="Email"
+                        Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}"/>
                                         
                 </Grid>
                 <Grid Grid.Row="2">
@@ -73,9 +76,9 @@
                         <ColumnDefinition Width="9.2*"/>
                     </Grid.ColumnDefinitions>
                     <materialDesign:PackIcon Grid.Column="0"
-                                             Kind="Key"
-                                             VerticalAlignment="Bottom"
-                                             Margin="4"/>
+                        Kind="Key"
+                        VerticalAlignment="Center"
+                        Margin="4"/>
                     <PasswordBox
                         Grid.Column="1"
                         PasswordChar="@"
@@ -109,6 +112,16 @@
                 </Grid>
             </Grid>
         </materialDesign:Card>
-
+        <ToggleButton
+  Style="{StaticResource MaterialDesignFlatAccentBgButton}"
+  Width="100"
+            Height="30">
+            <ToggleButton.Content>
+                <TextBlock Text="Cá nhân"/>
+            </ToggleButton.Content>
+            <materialDesign:ToggleButtonAssist.OnContent>
+                <TextBlock Text="Public"/>
+            </materialDesign:ToggleButtonAssist.OnContent>
+        </ToggleButton>
     </Grid>
 </Window>
